# Hexapod-Operator

./: .gitignore  CMakeLists.txt  README.md  protocol.md
docs/: communication_protocol.md  compilation.md
src/: command.hpp  config.hpp  dispatcher.hpp  main.cpp
src/commands/: attach_servos_command.hpp  connect_relay_command.hpp  detach_servos_command.hpp  disconnect_relay_command.hpp  get_current_command.hpp  get_voltage_command.hpp  read_sensor_command.hpp  set_led_command.hpp  set_leds_command.hpp  set_servo_angle_command.hpp  set_servo_angles_command.hpp  set_servo_pulse_command.hpp  set_servo_pulses_command.hpp
src/utils/: analog_reader.hpp  conversion.hpp  relay.hpp
test/: poll_sensor.py
